[package]
name = "youtube-wrapped"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "youtube_wrapped"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11.23", features = ["json"] }
url = "2"
serde_qs = "0.12.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
